--- a/style.css
+++ b/style.css
@@ -1,145 +1,69 @@
-.slider {
-  width: 100%;
-  position: relative;
-  margin: auto;
+.wrapper-slider {
+  width: 400px;
+  height: 650px;
+  margin: 0 auto;
+}
+
+.btns {
+  text-align: center;
+  display: flex;
+  width: 400px;
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+}
+
+.next, .prev {
+  border: none;
+  background: none;
+}
+
+.slider-container {
+  width: 400px;
+  height: 650px;
+  overflow: hidden;
+}
+
+.slider-track {
+  display: flex;
+  transition: 2s;
+  transform: translate(0, 0);
+}
+
+.wrapper {
+  min-width: 400px;
+  max-width: 400px;
   height: 650px;
 }
 
-@media (min-width: 500px) {
-  .slider {
-    min-width: 400px;
-    max-width: 500px;
-  }
-
-  .header {
-    min-width: 400px;
-    max-width: 500px;
-    margin: 0 auto;
-  }
-
-  body {
-    min-width: 400px;
-    max-width: 500px;
-  }
+.item {
+  height: 100%;
+  width: 100%;
 }
-
-.slider .previous, .slider .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 16px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-.slider .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.slider .previous:hover,
-.slider .next:hover {
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-.slider .item {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
+/*
 @keyframes fade {
   from {
-    margin-left: 100%;
+      width: 0;
   }
   to {
-    margin-left: 0;
+      width: 100px;
   }
+} */
+
+.blue {
+  background: blue;
 }
 
-.item {
-  overflow: hidden;
-  position: relative;
-  height: 100%;
-  width: 100%;
+.green {
+  background: green;
 }
 
-.pepermint-tagline {
-  width: 100%;
-  height: 40%;
-  position: absolute;
-  animation: pepermint-tagline 2s;
+.orange {
+  background: orange;
 }
 
-@keyframes pepermint-tagline {
-  0% {
-    margin-top: -100%;
-    display: none;
-  }
-  50% {
-    display: block;
-    margin-top: -100%;
-  }
-  100% {
-    margin-top: 0;
-    display: block;
-  }
-}
 
-.pepermint-tagline-back {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
 
-.pepermint-tagline-text {
-  position: absolute;
-  width: 80%;
-  margin-top: 30%;
-  margin-left: 10%;
-  animation: pepermint-tagline-text 3s;
-}
-
-@keyframes pepermint-tagline-text {
-  0% {
-    width: 0;
-  }
-  65% {
-    width: 0;
-  }
-  100% {
-    width: 80%;
-  }
-}
-
-.new-banner {
-  position: absolute;
-  width: 15%;
-  margin-left: 10%;
-}
-
-.peppermint-new-banner {
-  position: absolute;
-  width: 15%;
-  margin-left: 10%;
-  animation: peppermint-new-banner 3s;
-}
-
-@keyframes peppermint-new-banner {
-  0% {
-    margin-top: -100%;
-  }
-  65% {
-    margin-top: -100%;
-  }
-  100% {
-    margin-top: 0;
-  }
-}
 
 .raspberry-2 {
   width: 40%;
@@ -239,37 +163,29 @@
   }
 }
 
-@keyframes peppermint-product {
-  0% {
-    margin-left: 200%
-  }
-  50% {
-    margin-left: 200;
-  }
-  100% {
-    margin-left: 25%;
-  }
-}
-
 .peppermint-product {
   position: absolute;
   margin-left: 25%;
   margin-top: 90%;
   width: 50%;
   height: 25%;
-  animation: peppermint-product 2s; 
 }
 
-.tagline {
-  width: 100%;
-  height: 40%;
+.shop-now {
   position: absolute;
+  width: 50%;
+  margin-top: 140%;
+  margin-left: 25%;
 }
 
-.raspberry-tagline {
-  width: 100%;
-  height: 100%;
+.raspberry-1-1 {
   position: absolute;
+  width: 40%;
+  position: absolute;
+  margin-top: 60%;
+  margin-left: -10%;
+  animation-name: raspberry;
+  animation-duration: 2s;
 }
 
 .raspberry-product-container {
@@ -314,14 +230,34 @@
   }
 }
 
-.raspberry-1-1 {
+.petal-1 {
   position: absolute;
-  width: 40%;
-  position: absolute;
-  margin-top: 60%;
-  margin-left: -10%;
-  animation-name: raspberry;
+  width: 30%;
+  margin-top: 70%;
+  margin-left: 80%;
   animation-duration: 2s;
+  animation-name: petal;
+}
+
+.petal-2 {
+  position: absolute;
+  width: 30%;
+  margin-top: 110%;
+  margin-left: -15%;
+  animation-duration: 2s;
+  animation-name: petal;
+}
+
+@keyframes petal {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 0;
+  }
+  100% {
+    width: 30%;
+  }
 }
 
 .lemon {
@@ -341,56 +277,6 @@
   }
   100% {
     width: 45%;
-  }
-}
-
-.petal-1 {
-  position: absolute;
-  width: 30%;
-  margin-top: 70%;
-  margin-left: 80%;
-  animation-duration: 2s;
-  animation-name: petal;
-}
-
-@keyframes petal {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 0;
-  }
-  100% {
-    width: 30%;
-  }
-}
-
-.petal-2 {
-  position: absolute;
-  width: 30%;
-  margin-top: 110%;
-  margin-left: -15%;
-  animation-duration: 2s;
-  animation-name: petal;
-}
-
-.shop-now {
-  position: absolute;
-  width: 50%;
-  margin-top: 160%;
-  margin-left: 25%;
-}
-
-.headers .header-next {
-  animation: header 1s;
-}
-
-@keyframes header {
-  from {
-    opacity: 0.2;
-  }
-  to {
-    opacity: 1;
   }
 }
 
@@ -414,6 +300,109 @@
   }
 }
 
+.headers .header-next {
+  width: 400px;
+  animation: header 1s;
+}
+
+@keyframes header {
+  from {
+    opacity: 0.2;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.header {
+  width: 400px;
+}
+
+.pepermint-tagline {
+  width: 400px;
+  height: 40%;
+  position: absolute;
+  animation: pepermint-tagline 2s;
+}
+
+@keyframes pepermint-tagline {
+  0% {
+    margin-top: -100%;
+    display: none;
+  }
+  50% {
+    display: block;
+    margin-top: -100%;
+  }
+  100% {
+    margin-top: 0;
+    display: block;
+  }
+}
+
+.pepermint-tagline-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.pepermint-tagline-text {
+  position: absolute;
+  width: 80%;
+  margin-top: 30%;
+  margin-left: 10%;
+  animation: pepermint-tagline-text 3s;
+}
+
+@keyframes pepermint-tagline-text {
+  0% {
+    width: 0;
+  }
+  65% {
+    width: 0;
+  }
+  100% {
+    width: 80%;
+  }
+}
+
+.peppermint-new-banner {
+  position: absolute;
+  width: 15%;
+  margin-left: 10%;
+  animation: peppermint-new-banner 3s;
+}
+
+@keyframes peppermint-new-banner {
+  0% {
+    margin-top: -100%;
+  }
+  65% {
+    margin-top: -100%;
+  }
+  100% {
+    margin-top: 0;
+  }
+}
+
+.new-banner {
+  position: absolute;
+  width: 15%;
+  margin-left: 10%;
+}
+
+.tagline {
+  width: 100%;
+  height: 40%;
+  position: absolute;
+}
+
+.raspberry-tagline {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
 #plug {
   display: none;
 }
@@ -423,9 +412,9 @@
     display: block;
     width: 100%;
     height: 100%;
-  }
+}
 
-  .slider, .headers {
+.wrapper-slider {
     display: none;
   }
 }
